courseApplication/deployments/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    owner-student: MatiasSinisalo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        owner-student: MatiasSinisalo
    spec:
      containers:
      - name: backend
        image: matiassinisalo/fullstackopen:server-latest5
        resources:
          limits:
            memory: "500M"
            cpu: "500m"
        ports:
        - containerPort: 4000
