courseApplication/deployments/backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  labels:
    name: backend
spec:
  containers:
  - name: backend
    image: matiassinisalo/fullstackopen:server
    ports:
      - containerPort: 4000
