courseApplication/deployments/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    name: frontend
spec:
  containers:
  - name: frontend
    image: matiassinisalo/fullstackopen:frontend
    ports:
      - containerPort: 3000
