courseApplication/deployments/mongo-database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-database
  labels:
    app: mongo-database
    owner-student: MatiasSinisalo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-database
  template:
    metadata:
      labels:
        app: mongo-database
    spec:
      volumes:
        - name: mongo-db-storage
          persistentVolumeClaim:
            claimName: mongo-db-storage
      containers:
      - name: mongo-database
        resources:
          limits:
            cpu: "100m"
            memory: 400M
          requests:
            cpu: 100m
            memory: 100M
        image: mongo
        ports:
          - containerPort: 27017
        volumeMounts:
            - name: mongo-db-storage
              mountPath: /data/db
