courseApplication/deployments/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend
spec:
  ports:
    - port: 4000
      protocol: TCP
      targetPort: 4000
  selector:
    app: backend
  type: LoadBalancer
