courseApplication/deployments/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: frontend
  name: frontend
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    name: frontend
  type: LoadBalancer
