courseApplication/deployments/mongo-database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-database
  labels:
    owner-student: MatiasSinisalo
spec:
  selector:
    app: mongo-database
  ports:
  - port: 27017
    targetPort: 27017
