courseApplication/deployments/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    type: external
    owner-student: MatiasSinisalo
  name: backend
spec:
  host: backend-ohtuprojekti-staging.ext.ocp-test-0.k8s.it.helsinki.fi
  tls:
    termination: edge
  port:
    targetPort: 4000 
  to:
    kind: Service
    name: backend
