courseApplication/deployments/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    type: external
    owner-student: MatiasSinisalo
  name: frontend
spec:
  host: frontend-ohtuprojekti-staging.ext.ocp-test-0.k8s.it.helsinki.fi
  tls:
    termination: edge
  port:
    targetPort: 3000
  to:
    kind: Service
    name: frontend
